compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__guard_record_wrong_arity.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1001
expression: "type X { X(a: Int, b: Float) }\nfn x() {\n  case X(1, 2.0) { x if x == X(1) -> 1 _ -> 2 }\n}"
snapshot_kind: text
---
----- SOURCE CODE
type X { X(a: Int, b: Float) }
fn x() {
  case X(1, 2.0) { x if x == X(1) -> 1 _ -> 2 }
}

----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:3:30
  │
3 │   case X(1, 2.0) { x if x == X(1) -> 1 _ -> 2 }
  │                              ^^^^ Expected 2 arguments, got 1

This call accepts these additional labelled arguments:

  - b
