compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__hint_for_method_call.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2018
expression: "\npub type User {\n  User(id: Int, name: String)\n}\n\npub fn main(user: User) {\n  user.login()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type User {
  User(id: Int, name: String)
}

pub fn main(user: User) {
  user.login()
}


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:7:8
  │
7 │   user.login()
  │        ^^^^^ This field does not exist

The value being accessed has this type:

    User

It has these accessible fields:

    .id
    .name

Gleam is not object oriented, so if you are trying to call a method on this
value you may want to use the function syntax instead.

    login(value)
