compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__incorrect_arity_error.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 261
expression: "let id = fn(x) { x } id()"
snapshot_kind: text
---
----- SOURCE CODE
let id = fn(x) { x } id()

----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:1:22
  │
1 │ let id = fn(x) { x } id()
  │                      ^^^^ Expected 1 argument, got 0
