compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__int_eq_float.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 216
expression: 1 == 1.0
snapshot_kind: text
---
----- SOURCE CODE
1 == 1.0

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:6
  │
1 │ 1 == 1.0
  │      ^^^

Expected type:

    Int

Found type:

    Float
