compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__int_float_list.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 430
expression: "[1.0] == [1]"
snapshot_kind: text
---
----- SOURCE CODE
[1.0] == [1]

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:10
  │
1 │ [1.0] == [1]
  │          ^^^

Expected type:

    List(Float)

Found type:

    List(Int)
