compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__int_operator_on_floats_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3043
expression: 1.1 > 2.0
snapshot_kind: text
---
----- SOURCE CODE
1.1 > 2.0

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:5
  │
1 │ 1.1 > 2.0
  │     ^ Use >. instead

The > operator can only be used on Ints.
